# IDcard-caffe

./: CMakeLists.txt  README.md
deep_engine/: CMakeLists.txt
deep_engine/include/: engine.h  engine_caffe.h
deep_engine/src/: engine_caffe.cpp
deep_engine/test/: FilePathClass.cpp  test.cpp
deskew/: CMakeLists.txt
deskew/include/: BCRDeskew.h  Global.h  ImgExceptions.h  IntersectionFinder.h  LSD_Wrapper.h  Line_Utils.h  QuadrangleCostCalculator.h  QuadrangleFinder.h  QuadrangleFinder_Wrapper.h  QuadrangleGenerator.h  QuadrangleTrans.h  RawSegmentProcessor.h  SegmentsGroup.h  lsd.h
deskew/jni/: com_netease_mm_segment_jni_ImageSegment.cpp  com_netease_mm_segment_jni_ImageSegment.h
deskew/src/: BCRDeskew.cpp  IntersectionFinder.cpp  LSD_Wrapper.cpp  Line_Utils.cpp  QuadrangleCostCalculator.cpp  QuadrangleFinder.cpp  QuadrangleFinder_Wrapper.cpp  QuadrangleGenerator.cpp  QuadrangleTrans.cpp  RawSegmentProcessor.cpp  SegmentsGroup.cpp  lsd.cpp
deskew/test/: FilePathClass.cpp  FilePathClass.h  test.cpp
detect/include/: TextDetector.h
detect/src/: TextDetector.cpp
idcardrec/include/: 4debug.h  IDcardReader.h
idcardrec/src/: IDcardReader.cpp
test/: test.cpp
textline/: CMakeLists.txt
textline/LM/: MMapFile.h  NGram.lib  Test.cpp  bigram.cpp  bigram.h  hashDict.h  ngram.h
textline/LM/hash/: NGram.lib
textline/include/: Textline.h  Textline4idcard.h  tools.h
textline/src/: Textline.cpp  Textline4idcard.cpp  tools.cpp
textline/test/: .test.cpp.swp  FilePathClass.h  test.cpp
